<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="tesi.barto.myport.activities.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


<!--        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"
            android:layout_marginTop="10dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"/> -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationRL">

            <Switch
                android:id="@+id/locationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/tv_location_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"
            android:layout_marginTop="10dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otherRL">

            <Switch
                android:id="@+id/otherSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="Servizio Prova"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"
            android:layout_marginTop="10dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"/>

        <TextView
            android:id="@+id/uportView"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutConsent"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_dataconsent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="#00897b"
            android:contentDescription="@string/consent_desc"
            android:onClick="viewDataConsents"
            android:text="@string/consent_text"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/serviceButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="#00897b"
            android:onClick="aggiungiServizioProva"
            android:text="Aggiungi Servizio"
            android:textAlignment="center"
            android:textColor="#000000" />

        <LinearLayout
            android:id="@+id/linearLayoutConsentOptions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_disable"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="#80cbc4"
                android:contentDescription="@string/disable_desc"
                android:onClick="disableOption"
                android:text="@string/disable_text"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_withdraw"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="#26a69a"
                android:contentDescription="@string/withdraw_desc"
                android:onClick="withdrawOption"
                android:text="@string/withdraw_text"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

